<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.accueil.EditerProduitFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editer produit"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:hint="@string/text_hint_produit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editer_nom_produit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout45"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/text_categorie">

            <AutoCompleteTextView
                android:id="@+id/editer_categorie_produit"
                app:simpleItems="@array/categorie_produit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:hint="@string/text_hint_prix">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editer_prix_produit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_adresse_noir_24"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:hint="@string/text_hint_quantite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editer_quantite_produit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:hint="@string/text_hint_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editer_description_produit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:maxLength="50"
                android:maxLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boutton_supprimer_produit"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_supprimer"
                android:textSize="10sp"
                app:icon="@drawable/baseline_delete_24" />

            <Button
                android:id="@+id/boutton_editer_produit_annuler"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                app:icon="@drawable/ic_annuler_noir_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_annuler" />

            <Button
                android:id="@+id/boutton_editer_produit_valider"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                app:icon="@drawable/ic_valider_noir_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_valider" />
        </LinearLayout>


    </LinearLayout>
</FrameLayout>